Add check for /etc/fstab entries in mount_option template
The behavior of the rules based on the template changed in ways that:
- rules will fail if the configuration (/etc/fstab) is invalid;
- rules will always ignore absent active mount points (/proc/mounts);
- rules will ignore absent configuration (/etc/fstab) only if
  'mount_has_to_exist' is set to 'true' (which is default).

Remediation behavior remains the same. The 'mount_has_to_exist' is now
a Boolean parameter with the default value 'true'.

This adds 'offline' capability to the rules and better handling of
systemd-mounted filesystems.

--- a/linux_os/guide/system/permissions/partitions/mount_option_dev_shm_nodev/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_dev_shm_nodev/rule.yml
@@ -57,10 +57,10 @@ template:
     vars:
         mountpoint: /dev/shm
         mountoption: nodev
-        mount_has_to_exist: 'no'
+        mount_has_to_exist: false
         filesystem: tmpfs
         type: tmpfs
-        mount_has_to_exist@sle12: 'yes'
+        mount_has_to_exist@sle12: true
         filesystem@sle12: ''
         type@sle12: ''
     backends:
