--- a/linux_os/guide/system/permissions/partitions/mount_option_proc_hidepid/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_proc_hidepid/rule.yml
@@ -51,7 +51,7 @@ template:
         mountpoint: /proc
         mountoption: hidepid
         mountoption_arg_var: var_mount_option_proc_hidepid
-        mount_has_to_exist: 'no'
+        mount_has_to_exist: false
         filesystem: proc
         type: proc
     backends:
