--- a/linux_os/guide/system/permissions/partitions/mount_option_dev_shm_noexec/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_dev_shm_noexec/rule.yml
@@ -64,10 +64,10 @@ template:
     vars:
         mountpoint: /dev/shm
         mountoption: noexec
-        mount_has_to_exist: 'no'
+        mount_has_to_exist: false
         filesystem: tmpfs
         type: tmpfs
-        mount_has_to_exist@sle12: 'yes'
+        mount_has_to_exist@sle12: true
         filesystem@sle12: ''
         type@sle12: ''
     backends:
