--- a/shared/templates/mount_option/ansible.template
+++ b/shared/templates/mount_option/ansible.template
@@ -8,7 +8,7 @@
 {{{ ansible_instantiate_variables(MOUNTOPTION_ARG_VAR) }}}
 {{% endif %}}
 
-{{% if MOUNT_HAS_TO_EXIST == "no" %}}
+{{% if not MOUNT_HAS_TO_EXIST %}}
    {{% set TABFILE='' %}}
 {{% else %}}
    {{% set TABFILE='--fstab' %}}
@@ -55,7 +55,7 @@
     path: "{{{ MOUNTPOINT }}}"
     src: "{{ mount_info.source }}"
     opts: "{{ mount_info.options }}"
-    state: "mounted"
+    state: "present"
     fstype: "{{ mount_info.fstype }}"
   when:
     - (device_name.stdout is defined and (device_name.stdout | length > 0)) or ("{{{ TABFILE }}}" | length == 0)
