OCP4 STIG: SRG-APP-000092-CTR-000165,SRG-APP-000111-CTR-000220 are covered by two existing rules

--- a/controls/srg_ctr/SRG-APP-000358-CTR-000805.yml
+++ b/controls/srg_ctr/SRG-APP-000358-CTR-000805.yml
@@ -4,5 +4,6 @@ controls:
   - medium
   title: Audit records must be stored at a secondary location.
   rules:
+  - cluster_logging_operator_exist
   - audit_log_forwarding_enabled
-  status: not applicable
+  status: automated
