--- a/applications/openshift/logging/cluster_logging_operator_exist/rule.yml
+++ b/applications/openshift/logging/cluster_logging_operator_exist/rule.yml
@@ -18,7 +18,7 @@ identifiers:
 
 references:
   nist: AU-3(2)
-  srg: SRG-APP-000092-CTR-000165,SRG-APP-000111-CTR-000220
+  srg: SRG-APP-000092-CTR-000165,SRG-APP-000111-CTR-000220,SRG-APP-000358-CTR-000805
 
 ocil_clause: 'OpenShift Logging Operator is not installed'
 
