--- a/linux_os/guide/system/accounts/accounts-physical/logind_session_timeout/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-physical/logind_session_timeout/rule.yml
@@ -19,7 +19,7 @@ rationale: |-
 severity: medium
 
 platforms:
-    - rhel_greater_equal_8_7 and not rhel_equals_9_0
+    - os_linux[rhel]>=8.7 and os_linux[rhel]!=9.0
 
 identifiers:
     cce@rhel8: CCE-90784-0
