--- a/shared/applicability/os_linux.yml
+++ b/shared/applicability/os_linux.yml
@@ -12,3 +12,7 @@ args:
         os_name: "Fedora"
         os_id: 'fedora'
         os_id_ansible: "Fedora"
+    ol:
+        os_name: "Oracle Linux"
+        os_id: 'ol'
+        os_id_ansible: "OracleLinux"
