--- a/linux_os/guide/services/ssh/ssh_server/sshd_set_idle_timeout/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_set_idle_timeout/rule.yml
@@ -26,7 +26,7 @@ severity: medium
 
 {{% if "rhel" in product %}}
 platforms:
-    - rhel_less_equal_8_5
+    - os_linux[rhel]<=8.5
 {{% endif %}}
 
 identifiers:
