Fix indentation in fixtext section
Also move a not to a general warnings

--- a/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outband_n_established_connections_configured/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outband_n_established_connections_configured/rule.yml
@@ -43,5 +43,5 @@ fixtext: |-
 
 warnings:
     - general: |-
-        Changing firewall settings while connected over network can result in being locked out of
-        the system.
+        Changing firewall settings while connected over network can result in being
+        locked out of the system.
