--- a/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outband_n_established_connections_configured/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outband_n_established_connections_configured/rule.yml
@@ -3,7 +3,7 @@ documentation_complete: true
 title: 'Ensure outbound and established connections are configured'
 
 description: |-
-    Configure the firewall rules for new outbound, and established connections.
+    Configure the firewall rules for new outbound and established connections.
 
 rationale: |-
     If rules are not in place for new outbound, and established connections all packets will
