Add support for epoch in platform package
On rpm systems, we need to normalize the version and always put an
epoch to be able to compare the versions using the `sort -V` command.
On deb systems, the `dpkg --compare-versions` command that we use
can correctly handle versions without explicit epoch as if they would
have epoch 0.

--- a/shared/templates/platform_package/bash.template
+++ b/shared/templates/platform_package/bash.template
@@ -1,5 +1,5 @@
 {{%- for spec in VER_SPECS -%}}
-{{{ bash_pkg_conditional(PKGNAME, ver=spec.ver, op=spec.op) | trim }}}
+{{{ bash_pkg_conditional(PKGNAME, ver=spec.ev_ver, op=spec.op) | trim }}}
 {{%- if not loop.last %}} && {{% endif -%}}
 {{%- else -%}}
 {{{ bash_pkg_conditional(PKGNAME) }}}
