service_systemd-journal-remote_disabled: Improve Note

--- a/linux_os/guide/system/logging/journald/service_systemd-journal-remote_disabled/rule.yml
+++ b/linux_os/guide/system/logging/journald/service_systemd-journal-remote_disabled/rule.yml
@@ -9,7 +9,7 @@ description: |-
     NOTE:
         The same package, systemd-journal-remote , is used for both sending
         logs to remote hosts and receiving incoming logs.
-        With regards to receiving logs, there are two services;
+        With regards to receiving logs, there are two Systemd unit files;
         systemd-journal-remote.socket and systemd-journal-remote.service.
 
 rationale: |-
