service_systemd-journal-remote_disabled: Fix fixtext field

--- a/linux_os/guide/system/logging/journald/service_systemd-journal-remote_disabled/rule.yml
+++ b/linux_os/guide/system/logging/journald/service_systemd-journal-remote_disabled/rule.yml
@@ -27,7 +27,7 @@ ocil: |-
     {{{ ocil_service_enabled(service="systemd-journal-remote.socket") }}}
 
 fixtext: |-
-    {{{ fixtext_service_enabled("systemd-journal-remote.socket") }}}
+    {{{ fixtext_service_disabled("systemd-journal-remote.socket") }}}
 
 template:
     name: service_disabled
