OCPBUGS-7307: Remove templating from OCIL in alert_receiver_configured
The alert_receiver_configured rule has instructions/OCIL that tells
the user how to check if an alerting system is setup. The command relies
on a golang templating feature of the kubeclient to fish the appropriate
data out of OpenShift. The Compliance Operator uses the same
templating syntax to resolve variables in OCIL so that it can render
instructions appropriately.

These two template usages conflicted silently when the operator parsed
the datastream, causing the Compliance Operator to omit instructions for
that rule.

This is the only occurrence where the content suggests users leverage
the templating feature, so it should be the only rule that doesn't have
instructions as a result of this problem.

This commit updates the OCIL for that particular rule to use a different
way of getting the data that doesn't rely on the golang text templating
library feature exposed through the kubeclient. It also fixes a trival
spelling mistake in the rule.

--- a/applications/openshift/general/alert_receiver_configured/rule.yml
+++ b/applications/openshift/general/alert_receiver_configured/rule.yml
@@ -30,8 +30,8 @@ references:
 ocil_clause: 'Alert receiver is not configured'
 
 ocil: |-
-    Run the following command to see if alert receiver has been configured to send alerts to a orgzinational defined external system:
-    <pre>$ oc -n openshift-monitoring get secret alertmanager-main --template='{{ index .data "alertmanager.yaml" }}' | base64 --decode</pre>
+    Run the following command to see if alert receiver has been configured to send alerts to a organizational defined external system:
+    <pre>$ oc -n openshift-monitoring get secret alertmanager-main -ojson | jq '.data."alertmanager.yaml"' -r | base64 --decode</pre>
     Make sure that alert receiver has configured to send alerts to at least one real time external notification system.
 
 severity: medium
