--- a/controls/srg_ctr/SRG-APP-000122-CTR-000260.yml
+++ b/controls/srg_ctr/SRG-APP-000122-CTR-000260.yml
@@ -4,9 +4,11 @@ controls:
   - medium
   title: {{{ full_name }}} must protect audit tools from unauthorized modification.
   rules:
+  - rbac_logging_mod
+  related_rules:
   - audit_log_forwarding_uses_tls
   - audit_profile_set
   - directory_permissions_var_log_kube_audit
   - directory_permissions_var_log_oauth_audit
   - directory_permissions_var_log_ocp_audit
-  status: inherently met
+  status: manual
