--- a/controls/srg_ctr/SRG-APP-000123-CTR-000265.yml
+++ b/controls/srg_ctr/SRG-APP-000123-CTR-000265.yml
@@ -4,9 +4,11 @@ controls:
   - medium
   title: {{{ full_name }}} must protect audit tools from unauthorized deletion.
   rules:
+  - rbac_logging_del
+  related_rules:
   - audit_log_forwarding_uses_tls
   - audit_profile_set
   - directory_permissions_var_log_kube_audit
   - directory_permissions_var_log_oauth_audit
   - directory_permissions_var_log_ocp_audit
-  status: not applicable
+  status: manual
