OCP4 STIG: Remove audit_profile_set from rules: in controls where it's only related and will be covered by RHCOS checks later
Let's just ensure that the extra rule is not linked for the time being,
we'll cover these controls later with RHCOS checks, but for now we focus
on the OCP4 part mostly.

--- a/controls/srg_ctr/SRG-APP-000091-CTR-000160.yml
+++ b/controls/srg_ctr/SRG-APP-000091-CTR-000160.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: {{{ full_name }}} must generate audit records when successful/unsuccessful
     attempts to access privileges occur.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
