--- a/controls/srg_ctr/SRG-APP-000095-CTR-000170.yml
+++ b/controls/srg_ctr/SRG-APP-000095-CTR-000170.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: All audit records must identify what type of event has occurred within the
     container platform.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
