--- a/controls/srg_ctr/SRG-APP-000096-CTR-000175.yml
+++ b/controls/srg_ctr/SRG-APP-000096-CTR-000175.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: {{{ full_name }}} audit records must have a date and time association
     with all events.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
