--- a/controls/srg_ctr/SRG-APP-000100-CTR-000200.yml
+++ b/controls/srg_ctr/SRG-APP-000100-CTR-000200.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: All audit records must identify any containers associated with the event
     within {{{ full_name }}}.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
