--- a/controls/srg_ctr/SRG-APP-000266-CTR-000625.yml
+++ b/controls/srg_ctr/SRG-APP-000266-CTR-000625.yml
@@ -5,6 +5,6 @@ controls:
   title: {{{ full_name }}} must generate error messages that provide information
     necessary for corrective actions without revealing information that could be exploited
     by adversaries.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
