--- a/controls/srg_ctr/SRG-APP-000504-CTR-001280.yml
+++ b/controls/srg_ctr/SRG-APP-000504-CTR-001280.yml
@@ -3,6 +3,6 @@ controls:
   levels:
   - medium
   title: {{{ full_name }}} must generate audit record for privileged activities.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
