--- a/controls/srg_ctr/SRG-APP-000510-CTR-001310.yml
+++ b/controls/srg_ctr/SRG-APP-000510-CTR-001310.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: The container runtime must generate audit records for all container execution,
     shutdown, restart events, and program initiations.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
