--- a/controls/srg_ctr/SRG-APP-000097-CTR-000180.yml
+++ b/controls/srg_ctr/SRG-APP-000097-CTR-000180.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: All audit records must identify where in the container platform the event
     occurred.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
