--- a/controls/srg_ctr/SRG-APP-000098-CTR-000185.yml
+++ b/controls/srg_ctr/SRG-APP-000098-CTR-000185.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: All audit records must identify the source of the event within the container
     platform.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
