--- a/controls/srg_ctr/SRG-APP-000099-CTR-000190.yml
+++ b/controls/srg_ctr/SRG-APP-000099-CTR-000190.yml
@@ -3,6 +3,6 @@ controls:
   levels:
   - medium
   title: All audit records must generate the event results within the container platform.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
