--- a/controls/srg_ctr/SRG-APP-000116-CTR-000235.yml
+++ b/controls/srg_ctr/SRG-APP-000116-CTR-000235.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: {{{ full_name }}} must use internal system clocks to generate audit
     record time stamps.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
