--- a/controls/srg_ctr/SRG-APP-000119-CTR-000245.yml
+++ b/controls/srg_ctr/SRG-APP-000119-CTR-000245.yml
@@ -3,7 +3,7 @@ controls:
   levels:
   - medium
   title: {{{ full_name }}} must protect audit information from unauthorized modification.
-  rules:
+  related_rules:
   - audit_log_forwarding_uses_tls
   - audit_profile_set
   - directory_permissions_var_log_kube_audit
