--- a/controls/srg_ctr/SRG-APP-000381-CTR-000905.yml
+++ b/controls/srg_ctr/SRG-APP-000381-CTR-000905.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: {{{ full_name }}} must enforce access restrictions and support auditing
     of the enforcement actions.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
