--- a/controls/srg_ctr/SRG-APP-000497-CTR-001245.yml
+++ b/controls/srg_ctr/SRG-APP-000497-CTR-001245.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: {{{ full_name }}} must generate audit records when successful/unsuccessful
     attempts to modify security levels occur.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
