--- a/controls/srg_ctr/SRG-APP-000508-CTR-001300.yml
+++ b/controls/srg_ctr/SRG-APP-000508-CTR-001300.yml
@@ -3,6 +3,6 @@ controls:
   levels:
   - medium
   title: Direct access to the container platform must generate audit records.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
