--- a/controls/srg_ctr/SRG-APP-000509-CTR-001305.yml
+++ b/controls/srg_ctr/SRG-APP-000509-CTR-001305.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: {{{ full_name }}} must generate audit records for all account creations,
     modifications, disabling, and termination events.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
