--- a/controls/srg_ctr/SRG-APP-000374-CTR-000865.yml
+++ b/controls/srg_ctr/SRG-APP-000374-CTR-000865.yml
@@ -3,6 +3,11 @@ controls:
   levels:
   - medium
   title: All audit records must use UTC or GMT time stamps.
-  rules:
+  related_rules:
   - audit_profile_set
   status: inherently met
+  status_justification: |-
+    Openshift Container Platform conforms to DoD/DISA requirements regarding audit log fields.
+  artifact_description: |-
+    Supporting evidence is in the following documentation
+    https://docs.openshift.com/container-platform/latest/security/audit-log-view.html
