--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1859,7 +1859,9 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: automated
+    rules:
+      - sshd_use_strong_kex
 
   - id: 5.3.16
     title: Ensure SSH Idle Timeout Interval is configured (Automated)
