--- a/linux_os/guide/services/ssh/ssh_server/sshd_use_strong_kex/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_use_strong_kex/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: sle12,sle15,ubuntu2004,ubuntu2204
+prodtype: rhel7,sle12,sle15,ubuntu2004,ubuntu2204
 
 title: 'Use Only Strong Key Exchange algorithms'
 
@@ -19,10 +19,12 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86090-8
     cce@sle12: CCE-92339-1
     cce@sle15: CCE-92626-1
 
 references:
+    cis@rhel7: 5.3.15
     cis@sle12: 5.2.15
     cis@sle15: 5.2.15
     cis@ubuntu2004: 5.2.14
