--- a/linux_os/guide/system/network/network-firewalld/set_firewalld_appropriate_zone/rule.yml
+++ b/linux_os/guide/system/network/network-firewalld/set_firewalld_appropriate_zone/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: sle15
+prodtype: rhel7,rhel8,sle15
 
 title: 'Ensure network interfaces are assigned to appropriate zone'
 
@@ -16,9 +16,13 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86109-6
+    cce@rhel8: CCE-86111-2
     cce@sle15: CCE-92556-0
 
 references:
+    cis@rhel7: 3.5.1.6
+    cis@rhel8: 3.4.1.6
     cis@sle15: 3.5.1.5
 
 ocil_clause: 'Your system accepts all incoming packets for unnecessary services and ports'
