Enable set_nftables_table rule for RHEL
The set_nftables_table rule is also applicable for RHEL and satisfy CIS
requirements for RHEL7, RHEL8 and RHEL9.

--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1106,7 +1106,13 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: supported
+    notes: |-
+      RHEL7 is not using nftables by default.
+    related_rules:
+      - set_nftables_table
+      - var_nftables_family=inet
+      - var_nftables_table=filter
 
   - id: 3.5.2.6
     title: Ensure nftables base chains exist (Automated)
