--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -1095,14 +1095,19 @@ controls:
     rules:
       - set_firewalld_default_zone
 
-  # NEEDS RULE
-  # https://github.com/ComplianceAsCode/content/issues/5244
   - id: 3.4.2.2
     title: Ensure at least one nftables table exists (Automated)
     levels:
       - l1_server
       - l1_workstation
-    status: pending
+    status: partial
+    notes:
+       The audit (OVAL check) cannot be automated,
+       and should be addressed manually.
+    rules:
+      - set_nftables_table
+      - var_nftables_family=inet
+      - var_nftables_table=filter
 
   # NEEDS RULE
   # https://github.com/ComplianceAsCode/content/issues/5245
