service_nftables_enabled: Add ubuntu prodtype and cis references

--- a/linux_os/guide/system/network/network-nftables/service_nftables_enabled/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/service_nftables_enabled/rule.yml
@@ -1,17 +1,17 @@
 documentation_complete: true
 
-prodtype: sle15
+prodtype: sle15,ubuntu2004,ubuntu2204
 
 title: 'Verify nftables Service is Enabled'
 
 description: |-
-    The nftables service allows for the loading of nftables rulesets during boot, 
+    The nftables service allows for the loading of nftables rulesets during boot,
     or starting on the nftables service
     {{{ describe_service_enable(service="nftables") }}}
 
 rationale: |-
-    The nftables service restores the nftables rules from the rules files referenced 
-    in the <tt>/etc/sysconfig/nftables.conf</tt> file during boot or the starting of 
+    The nftables service restores the nftables rules from the rules files referenced
+    in the <tt>/etc/sysconfig/nftables.conf</tt> file during boot or the starting of
     the nftables service
 
 
@@ -22,7 +22,8 @@ identifiers:
 
 references:
     cis@sle15: 3.5.2.9
-
+    cis@ubuntu2004: 3.5.2.9
+    cis@ubuntu2204: 3.5.2.9
 
 ocil_clause: '{{{ ocil_clause_service_enabled("nftables") }}}'
 
