Set sshd_strong_kex variable in CIS RHEL7 control
The current CIS Benchmark for RHEL7 requires suggest a different set of
algorithms not present in the current variable options. A new option was
included specific for RHEL7. In the future, we should try to use more
generic variables instead of product specific options but this would
demand more investigation to confirm if it is reasonable in this
context.

--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1862,6 +1862,7 @@ controls:
     status: automated
     rules:
       - sshd_use_strong_kex
+      - sshd_strong_kex=cis_rhel7
 
   - id: 5.3.16
     title: Ensure SSH Idle Timeout Interval is configured (Automated)
