OCP4 STIG: SRG-APP-000131-CTR-000285 is configurable with reject_unsigned_images_by_default

--- a/applications/openshift/integrity/reject_unsigned_images_by_default/rule.yml
+++ b/applications/openshift/integrity/reject_unsigned_images_by_default/rule.yml
@@ -43,7 +43,7 @@ identifiers:
 
 references:
   nist: CM-5(3),CM-7(2),CM-7(5),CM-11,SA-10(1)
-  srg: SRG-APP-000131-CTR-000280,SRG-APP-000131-CTR-000285,SRG-APP-000384-CTR-000915
+  srg: SRG-APP-000131-CTR-000285
 
 ocil_clause: "The default policy of image verification is not 'reject'"
 
