--- a/applications/openshift/registry/ocp_allowed_registries/rule.yml
+++ b/applications/openshift/registry/ocp_allowed_registries/rule.yml
@@ -28,7 +28,7 @@ severity: medium
 
 references:
     nist: CM-5(3),CM-7(2),CM-7(5),CM-11
-    srg: SRG-APP-000131-CTR-000280,SRG-APP-000131-CTR-000285,SRG-APP-000384-CTR-000915
+    srg: SRG-APP-000456-CTR-001125
 
 warnings:
     - general: |-
