--- a/controls/srg_ctr/SRG-APP-000133-CTR-000295.yml
+++ b/controls/srg_ctr/SRG-APP-000133-CTR-000295.yml
@@ -4,3 +4,11 @@ controls:
   - medium
   title: {{{ full_name }}} must limit privileges to the container platform runtime.
   status: inherently met
+  artifact_description: |-
+    Supporting evidence is in the following documentation
+
+    https://docs.openshift.com/container-platform/latest/authentication/using-rbac.html
+  status_justification: |-
+    The OpenShift Container Platform provides RBAC policies and enforcement of those policies out of the box.  Verification of SRG-APP-000340-CTR-000770 will ensure that binding of user and groups to roles provides proper restriction of access to resources. For more information on how RBAC policies work in OpenShift.
+
+    Access to the OpenShift Container Platform API service is enforced by the platform's RBAC policy.
