--- a/controls/srg_ctr/SRG-APP-000381-CTR-000905.yml
+++ b/controls/srg_ctr/SRG-APP-000381-CTR-000905.yml
@@ -7,3 +7,13 @@ controls:
   related_rules:
   - audit_profile_set
   status: inherently met
+  artifact_description: |-
+    Supporting evidence is in the following documentation
+
+    https://docs.openshift.com/container-platform/latest/security/audit-log-policy-config.html
+  status_justification: |-
+    OpenShift comes with a robust RBAC system by default. Users are given Roles that are comprised of Actions they can or cannot perform. All interactions with the RBAC system are by way of the API Server. The API Server by default logs all activity for audit. The specific configuration for the level at which the API server logs interactions is configurable with the following steps:
+      `oc edit apiserver cluster` 
+    Observe the value referenced in the `spec.audit.profile` key.
+    There are 3 options available for this key, all of which log the metadata for read and write requests. Those options are [Default, WriteRequestBodies, AllRequestBodies].
+    https://docs.openshift.com/container-platform/latest/security/audit-log-policy-config.html
