Include rule for checking password last change in RHEL
The accounts_password_last_change_is_in_past rule also satisfies the
CIS requirements for RHEL7, RHEL8 and RHEL9.

--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -2024,7 +2024,9 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: automated
+    rules:
+      - accounts_password_last_change_is_in_past
 
   - id: 5.5.2
     title: Ensure system accounts are secured (Automated)
