--- a/linux_os/guide/system/accounts/accounts-restrictions/password_storage/accounts_password_last_change_is_in_past/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/password_storage/accounts_password_last_change_is_in_past/rule.yml
@@ -12,10 +12,16 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86524-6
+    cce@rhel8: CCE-86525-3
+    cce@rhel9: CCE-86526-1
     cce@sle12: CCE-92330-0
     cce@sle15: CCE-92504-0
 
 references:
+    cis@rhel7: 5.5.1.5
+    cis@rhel8: 5.6.1.5
+    cis@rhel9: 5.6.1.5
     cis@sle12: 5.4.1.6
     cis@sle15: 5.4.1.6
 
