--- a/linux_os/guide/system/accounts/accounts-restrictions/password_expiration/accounts_set_post_pw_existing/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/password_expiration/accounts_set_post_pw_existing/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: sle12,sle15
+prodtype: rhel7,rhel8,rhel9,sle12,sle15
 
 title: 'Set existing passwords a period of inactivity before they been locked'
 
@@ -9,7 +9,6 @@ description: |-
     to be automatically disabled by running the following command:
     <pre>$ sudo chage --inactive 30<i>USER</i></pre>
 
-
 rationale: |-
     Inactive accounts pose a threat to system security since the users are not logging in to
     notice failed login attempts or other anomalies.
@@ -17,10 +16,16 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86757-2
+    cce@rhel8: CCE-86758-0
+    cce@rhel9: CCE-86759-8
     cce@sle12: CCE-92322-7
     cce@sle15: CCE-92480-3
 
 references:
+    cis@rhel7: 5.5.1.4
+    cis@rhel8: 5.6.1.4
+    cis@rhel9: 5.6.1.4
     cis@sle12: 5.4.1.5
     cis@sle15: 5.4.1.5
     cis@ubuntu2004: 5.4.1.4
@@ -36,7 +41,6 @@ references:
     nist-csf: DE.CM-1,DE.CM-3,PR.AC-1,PR.AC-4,PR.AC-6,PR.AC-7
     pcidss: Req-8.1.4
     srg: SRG-OS-000118-GPOS-00060
-
 
 ocil_clause: 'the value of INACTIVE is greater than the expected value or is -1'
 
