ubuntu2204: product: Fix oval feed name and add NetworkManager to
overrides

--- a/products/ubuntu2204/product.yml
+++ b/products/ubuntu2204/product.yml
@@ -11,7 +11,7 @@ pkg_manager: "apt_get"
 pkg_manager_config_file: "/etc/apt/apt.conf"
 
 init_system: "systemd"
-oval_feed_url: "https://people.canonical.com/~ubuntu-security/oval/com.ubuntu.focal.cve.oval.xml"
+oval_feed_url: "https://people.canonical.com/~ubuntu-security/oval/com.ubuntu.jammy.cve.oval.xml"
 
 grub2_boot_path: "/boot/grub"
 grub2_uefi_boot_path: "/boot/grub"
@@ -34,6 +34,7 @@ platform_package_overrides:
   gdm: gdm3
   grub2: grub2-common
   net-snmp: snmp
+  NetworkManager: network-manager
   nss-pam-ldapd: libpam-ldap
   pam: libpam-runtime
   shadow: login
