package_iptables-persistent_removed: Fix typo in package name

--- a/linux_os/guide/system/network/network-iptables/package_iptables-persistent_removed/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/package_iptables-persistent_removed/rule.yml
@@ -24,7 +24,7 @@ ocil: '{{{ ocil_package(package="iptables-persistent") }}}'
 template:
     name: package_removed
     vars:
-        pkgname: iptables-persisten
+        pkgname: iptables-persistent
 
 fixtext: |-
     {{{ describe_package_remove(package="iptables-persistent") }}}
