Disable FIPS-related rule group for 'osbuild' platform
The rules are based on runtime sources of information and therefore
can't be used in the OSBuild environment.

--- a/linux_os/guide/system/software/integrity/fips/group.yml
+++ b/linux_os/guide/system/software/integrity/fips/group.yml
@@ -15,4 +15,4 @@ description: |-
     <br /><br />
     See <b>{{{ weblink(link="http://csrc.nist.gov/publications/PubsFIPS.html") }}}</b> for more information.
 
-platform: machine
+platform: machine and not osbuild
