--- a/linux_os/guide/system/permissions/files/permissions_local_var_log/rule.yml
+++ b/linux_os/guide/system/permissions/files/permissions_local_var_log/rule.yml
@@ -34,6 +34,7 @@ references:
     cis@sle12: 4.2.3
     cis@sle15: 4.2.3
     cis@ubuntu2004: 4.2.3
+    cis@ubuntu2204: 4.2.3
     disa: CCI-001312
     nist: SI-11(a),SI-11(b),SI-11.1(iii)
     nist-csf: PR.AC-4,PR.DS-5
