--- a/linux_os/guide/system/logging/rsyslog_accepting_remote_messages/rsyslog_nolisten/rule.yml
+++ b/linux_os/guide/system/logging/rsyslog_accepting_remote_messages/rsyslog_nolisten/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: alinux3,fedora,ol7,ol8,rhel7,rhel8,rhel9,rhv4,sle12,sle15
+prodtype: alinux3,fedora,ol7,ol8,rhel7,rhel8,rhel9,rhv4,sle12,sle15,ubuntu2204
 
 title: 'Ensure rsyslog Does Not Accept Remote Messages Unless Acting As Log Server'
 
@@ -38,6 +38,7 @@ references:
     cis@rhel9: 4.2.1.7
     cis@sle12: 4.2.1.6
     cis@sle15: 4.2.1.6
+    cis@ubuntu2204: 4.2.2.7
     cobit5: APO01.06,APO11.04,APO13.01,BAI03.05,BAI10.01,BAI10.02,BAI10.03,BAI10.05,DSS01.05,DSS03.01,DSS05.02,DSS05.04,DSS05.07,DSS06.02,MEA02.01
     disa: CCI-000318,CCI-000366,CCI-000368,CCI-001812,CCI-001813,CCI-001814
     isa-62443-2009: 4.2.3.4,4.3.3.3.9,4.3.3.4,4.3.3.5.8,4.3.4.3.2,4.3.4.3.3,4.3.4.4.7,4.4.2.1,4.4.2.2,4.4.2.4,4.4.3.3
