--- a/linux_os/guide/services/ntp/service_chronyd_enabled/rule.yml
+++ b/linux_os/guide/services/ntp/service_chronyd_enabled/rule.yml
@@ -28,6 +28,8 @@ identifiers:
 references:
     cis@rhel7: 2.2.1.3
     cis@rhel8: 2.2.1.2
+    cis@ubuntu2004: 2.1.1.1
+    cis@ubuntu2204: 2.1.2.3
     ism: 0988,1405
     srg: SRG-OS-000355-GPOS-00143
 
@@ -43,5 +45,7 @@ srg_requirement: '{{{ srg_requirement_service_enabled(service="chronyd") }}}'
 template:
     name: service_enabled
     vars:
-        servicename: chronyd
         packagename: chrony
+        servicename: chronyd
+        servicename@ubuntu2004: chrony
+        servicename@ubuntu2204: chrony
