--- a/controls/srg_ctr/SRG-APP-000142-CTR-000330.yml
+++ b/controls/srg_ctr/SRG-APP-000142-CTR-000330.yml
@@ -4,3 +4,8 @@ controls:
   - medium
   title: {{{ full_name }}} runtime must enforce the use of ports that are non-privileged.
   status: manual
+  rules:
+    - scc_limit_host_dir_volume_plugin
+    - scc_limit_host_ports
+    - scc_limit_network_namespace
+    - scc_limit_privileged_containers
