--- a/controls/cis_sle15.yml
+++ b/controls/cis_sle15.yml
@@ -1122,7 +1122,10 @@ controls:
     levels:
       - l1_server
       - l1_workstation
-    status: manual # rule is missing
+    status: automated
+    rules:
+      - var_nftable_master_config_file=sysconfig
+      - nftables_ensure_default_deny_policy
 
   - id: 3.5.2.9
     title: Ensure nftables service is enabled (Automated)
