OCP4 STIG: SRG-APP-000141-CTR-000320: Fix typo in attribute
For some reason, the policy files in rules use checktext, but the
controls use check.

--- a/controls/srg_ctr/SRG-APP-000141-CTR-000320.yml
+++ b/controls/srg_ctr/SRG-APP-000141-CTR-000320.yml
@@ -11,7 +11,7 @@ controls:
   - ocp_insecure_registries
   - ocp_insecure_allowed_registries_for_import
   status: manual
-  checktext: |-
+  check: |-
     To review the container images within the container platform registry, run the following command:
     > oc get images
     Review the container platform container images to validate that only
@@ -21,3 +21,4 @@ controls:
     Remove all container images from the container platform registry that
     are not being used or contain features and functions not supported by
     the platform.
+
