--- a/controls/srg_ctr/SRG-APP-000383-CTR-000910.yml
+++ b/controls/srg_ctr/SRG-APP-000383-CTR-000910.yml
@@ -5,3 +5,11 @@ controls:
   title: All non-essential, unnecessary, and unsecure DoD ports, protocols, and services
     must be disabled in the container platform.
   status: inherently met
+  artifact_description: |-
+    Supporting evidence is in the following documentation
+
+    https://docs.openshift.com/container-platform/latest/installing/installing_bare_metal/installing-bare-metal.html#installation-network-user-infra_installing-bare-metal
+  status_justification: |-
+    The container platform inherently only exposes the ports which are needed and adhere to DoD standards. By default all communications use two-way TLS. A full list is available here:
+
+    https://docs.openshift.com/container-platform/latest/installing/installing_bare_metal/installing-bare-metal.html#installation-network-user-infra_installing-bare-metal
