OCP4 STIG: SRG-APP-000384-CTR-000915 is covered by CVO

--- a/applications/openshift/integrity/cluster_version_operator_exists/rule.yml
+++ b/applications/openshift/integrity/cluster_version_operator_exists/rule.yml
@@ -19,6 +19,7 @@ identifiers:
 
 references:
   nist: SA-10(1)
+  srg: SRG-APP-000384-CTR-000915
 
 {{% set jqfilter = '[.status.conditions[] | select(.type=="Available") | .status]' %}}
 {{% set apipath = '/apis/config.openshift.io/v1/clusterversions/version' %}}
