--- a/applications/openshift/integrity/cluster_version_operator_verify_integrity/rule.yml
+++ b/applications/openshift/integrity/cluster_version_operator_verify_integrity/rule.yml
@@ -17,6 +17,7 @@ identifiers:
 
 references:
   nist: SA-10(1)
+  srg: SRG-APP-000384-CTR-000915
 
 {{% set jqfilter = '[.status.history[0:-1]|.[]|.verified]' %}}
 {{% set apipath = '/apis/config.openshift.io/v1/clusterversions/version' %}}
