--- a/controls/srg_ctr/SRG-APP-000384-CTR-000915.yml
+++ b/controls/srg_ctr/SRG-APP-000384-CTR-000915.yml
@@ -6,7 +6,10 @@ controls:
     organization-defined policies regarding software program usage and restrictions,
     and/or rules authorizing the terms and conditions of software program usage.
   rules:
+  - cluster_version_operator_exists
+  - cluster_version_operator_verify_integrity
+  related_rules:
   - reject_unsigned_images_by_default
   - ocp_allowed_registries
   - ocp_allowed_registries_for_import
-  status: inherently met
+  status: automated
