Replace login_defs platform by package platform
The `login_defs` platform has slightly special meaning, the purpose
isn't to check for some `login_defs` package but the purpose is to check
for a package that provides `/etc/login.defs` file. However, there is
very little benefit in this logic. Instead, we can unify it and check
directly for the package because we know its name. To do that, we will
use the templated `package` platform. It is a different package on
different distributions, so we will as usually use the upstream project
name as the `package` platform key.

--- a/linux_os/guide/system/accounts/accounts-restrictions/account_expiration/account_disable_post_pw_expiration/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/account_expiration/account_disable_post_pw_expiration/rule.yml
@@ -86,4 +86,4 @@ fixtext: |-
 
 srg_requirement: '{{{ full_name }}} account identifiers (individuals, groups, roles, and devices) must be disabled after 35 days of inactivity.'
 
-platform: login_defs
+platform: package[shadow-utils]
