--- a/linux_os/guide/system/accounts/accounts-restrictions/password_expiration/accounts_password_minlen_login_defs/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/password_expiration/accounts_password_minlen_login_defs/rule.yml
@@ -64,4 +64,4 @@ fixtext: |-
 
 srg_requirement: '{{{ full_name }}} passwords for new users must have a minimum of 15 characters.'
 
-platform: login_defs
+platform: package[shadow-utils]
