--- a/linux_os/guide/system/accounts/accounts-session/accounts_have_homedir_login_defs/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_have_homedir_login_defs/rule.yml
@@ -50,4 +50,4 @@ fixtext: |-
 
 srg_requirement: "All {{{ full_name }}} local interactive user accounts must be assigned a home directory upon creation."
 
-platform: login_defs
+platform: package[shadow-utils]
