--- a/linux_os/guide/system/accounts/accounts-session/accounts_logon_fail_delay/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_logon_fail_delay/rule.yml
@@ -43,7 +43,7 @@ ocil: |-
     <pre>$ sudo grep -i "FAIL_DELAY" /etc/login.defs
     FAIL_DELAY {{{ xccdf_value("var_accounts_fail_delay") }}}</pre>
 
-platform: login_defs
+platform: package[shadow-utils]
 
 fixtext: |-
     Configure the {{{ full_name }}} to enforce a delay of at least {{{ xccdf_value("var_accounts_fail_delay") }}} seconds between logon prompts following a failed console logon attempt.
