--- a/shared/applicability/package.yml
+++ b/shared/applicability/package.yml
@@ -47,6 +47,16 @@ args:
     pkgname: polkit
   postfix:
     pkgname: postfix
+  shadow-utils:
+    {{% if pkg_system == "rpm" %}}
+    {{% if product in ["sle12", "sle15"] %}}
+      pkgname: shadow
+    {{% else %}}
+      pkgname: shadow-utils
+    {{% endif %}}
+    {{% else %}}
+      pkgname: login
+    {{% endif %}}
   sssd:
     {{% if product in ["sle12", "sle15"] %}}
       pkgname: sssd
