--- a/linux_os/guide/system/accounts/accounts-pam/set_password_hashing_algorithm/set_password_hashing_algorithm_logindefs/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/set_password_hashing_algorithm/set_password_hashing_algorithm_logindefs/rule.yml
@@ -6,8 +6,8 @@ title: 'Set Password Hashing Algorithm in /etc/login.defs'
 
 description: |-
     In <tt>/etc/login.defs</tt>, add or correct the following line to ensure
-    the system will use SHA-512 as the hashing algorithm:
-    <pre>ENCRYPT_METHOD SHA512</pre>
+    the system will use {{{ xccdf_value("var_password_hashing_algorithm") }}} as the hashing algorithm:
+    <pre>ENCRYPT_METHOD {{{ xccdf_value("var_password_hashing_algorithm") }}}</pre>
 
 rationale: |-
     Passwords need to be protected at all times, and encryption is the standard method for protecting passwords.
@@ -51,7 +51,7 @@ references:
     stigid@sle15: SLES-15-010260
     stigid@ubuntu2004: UBTU-20-010404
 
-ocil_clause: 'ENCRYPT_METHOD is not set to SHA512'
+ocil_clause: 'ENCRYPT_METHOD is not set to {{{ xccdf_value("var_password_hashing_algorithm") }}}'
 
 ocil: |-
     {{% if product in ['rhel9'] -%}}
@@ -64,7 +64,7 @@ ocil: |-
 
     $ sudo grep -i ENCRYPT_METHOD /etc/login.defs
 
-    ENCRYPT_METHOD SHA512
+    ENCRYPT_METHOD {{{ xccdf_value("var_password_hashing_algorithm") }}}
 
 {{% if product in ['rhel9'] -%}}
 srg_requirement: 'The {{{ full_name }}} pam_unix.so module must be configured in the system-auth file to use a FIPS 140-3 approved cryptographic hashing algorithm for system authentication.'
@@ -77,4 +77,4 @@ fixtext: |-
 
     Add or update the following line in the "/etc/login.defs" file:
 
-    ENCRYPT_METHOD SHA512
+    ENCRYPT_METHOD {{{ xccdf_value("var_password_hashing_algorithm") }}}
