--- a/linux_os/guide/system/software/updating/security_patches_up_to_date/rule.yml
+++ b/linux_os/guide/system/software/updating/security_patches_up_to_date/rule.yml
@@ -52,6 +52,8 @@ references:
     cis@rhel7: "1.8"
     cis@rhel8: "1.9"
     cis@rhel9: "1.9"
+    cis@sle12: "1.9"
+    cis@sle15: "1.9"
     cjis: 5.10.4.1
     cobit5: APO12.01,APO12.02,APO12.03,APO12.04,BAI03.10,DSS05.01,DSS05.02
     disa: CCI-000366,CCI-001227
