--- a/controls/cis_sle12.yml
+++ b/controls/cis_sle12.yml
@@ -499,20 +499,16 @@ controls:
       - file_owner_etc_issue_net
       - file_permissions_etc_issue_net
 
-  - id: 1.9
+  - id: "1.9"
     title: Ensure updates, patches, and additional security software are installed (Manual)
     levels:
     - l1_server
     - l1_workstation
     status: manual # rule is missing
+    related_rules:
+    - security_patches_up_to_date
 
-  - id: 1.10
-    title: Ensure GNOME Display Manager is removed (Automated)
-    levels:
-    - l2_server
-    status: manual
-
-  - id: 1.10
+  - id: "1.10"
     title: Ensure GDM login banner is configured (Automated)
     levels:
       - l1_server
